tests/missing-ending-array-type-bracket.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected the array type to end with a ']'.

arr: i32[2
